template/angular/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
  labels:
    app: $APP_NAME
  namespace: $NAMESPACE
spec:
  selector:
    app: $APP_NAME
  ports:
    - name: business
      protocol: TCP
      port: 8080
      targetPort: business
